# ros-training

./: README.md  TODO
models/robot/: model.config  model.sdf
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: robot_bringup.launch
robot_description/urdf/: body.xacro  caster.xacro  robot.gazebo  robot.xacro  wheel.xacro
robot_description/urdf/config/: config.yaml
robot_navigation/: package.xml
robot_navigation/config/: diff_control.yaml  robot_control.yaml
robot_navigation/launch/: robot_navigation.launch
