<?xml version="1.0"?>
<package format="2">
  <name>robot_navigation</name>
  <version>0.0.0</version>
  <description>The robot_navigation package</description>
  <maintainer email="nluce@todo.todo">nluce</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ros_controllers</exec_depend>

  <export>

  </export>
</package>
